Fixed some vertical spacing, started some intermediate styling for medium screens

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -366,8 +366,8 @@ meta.foundation-mq-medium {
   width: 40.063em; }
 
 meta.foundation-mq-large {
-  font-family: "/only screen and (min-width:64.063em)/";
-  width: 64.063em; }
+  font-family: "/only screen and (min-width:58.813em)/";
+  width: 58.813em; }
 
 meta.foundation-mq-xlarge {
   font-family: "/only screen and (min-width:90.063em)/";
@@ -1080,7 +1080,7 @@ select {
     position: relative;
     right: 91.66667%;
     left: auto; } }
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 58.813em) {
   .large-push-0 {
     position: relative;
     left: 0%;
@@ -1716,7 +1716,7 @@ select {
       clear: none; }
     .medium-block-grid-12 > li:nth-of-type(12n+1) {
       clear: both; } }
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 58.813em) {
   .large-block-grid-1 > li {
     width: 100%;
     list-style: none; }
@@ -4739,7 +4739,7 @@ meta.foundation-mq-topbar {
 
   .small-text-justify {
     text-align: justify !important; } }
-@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+@media only screen and (min-width: 40.063em) and (max-width: 58.75em) {
   .medium-only-text-left {
     text-align: left !important; }
 
@@ -4763,7 +4763,7 @@ meta.foundation-mq-topbar {
 
   .medium-text-justify {
     text-align: justify !important; } }
-@media only screen and (min-width: 64.063em) and (max-width: 90em) {
+@media only screen and (min-width: 58.813em) and (max-width: 90em) {
   .large-only-text-left {
     text-align: left !important; }
 
@@ -4775,7 +4775,7 @@ meta.foundation-mq-topbar {
 
   .large-only-text-justify {
     text-align: justify !important; } }
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 58.813em) {
   .large-text-left {
     text-align: left !important; }
 
@@ -5415,7 +5415,7 @@ ul.off-canvas-list {
   th.hide-for-small-only, td.hide-for-small-only, th.show-for-small-up, td.show-for-small-up, th.hide-for-small, td.hide-for-small, th.hide-for-small-down, td.hide-for-small-down, th.show-for-medium-only, td.show-for-medium-only, th.show-for-medium-up, td.show-for-medium-up, th.show-for-medium, td.show-for-medium, th.show-for-medium-down, td.show-for-medium-down, th.hide-for-large-only, td.hide-for-large-only, th.hide-for-large-up, td.hide-for-large-up, th.hide-for-large, td.hide-for-large, th.show-for-large-down, td.show-for-large-down, th.hide-for-xlarge-only, td.hide-for-xlarge-only, th.hide-for-xlarge-up, td.hide-for-xlarge-up, th.hide-for-xxlarge-only, td.hide-for-xxlarge-only, th.hide-for-xxlarge-up, td.hide-for-xxlarge-up {
     display: table-cell !important; } }
 /* large displays */
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 58.813em) {
   .hide-for-small-only, .show-for-small-up, .hide-for-small, .hide-for-small-down, .hide-for-medium-only, .show-for-medium-up, .hide-for-medium, .hide-for-medium-down, .show-for-large-only, .show-for-large-up, .show-for-large, .show-for-large-down, .hide-for-xlarge-only, .hide-for-xlarge-up, .hide-for-xxlarge-only, .hide-for-xxlarge-up {
     display: inherit !important; }
 
@@ -5618,7 +5618,7 @@ th.hide-for-touch {
   display: none; }
 
 .primary-nav, .top-bar-section ul li > a {
-  font-family: Rockwell, serif;
+  font-family: "lexia", Georgia, serif;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: .05em;
@@ -5802,6 +5802,45 @@ ul.primary-nav li > a {
 
   li.active .join-us::after {
     opacity: 0; } }
+@media only screen and (min-width: 40.063em) and (max-width: 58.75em) {
+  .logo {
+    margin-top: 2.3em;
+    max-height: 45%; }
+
+  .top-bar-section ul {
+    width: auto;
+    margin-top: 3em; }
+
+  .top-bar-section li.active:not(.has-form) {
+    border-top: none;
+    height: auto;
+    position: relative; }
+    .top-bar-section li.active:not(.has-form)::after {
+      display: none; }
+
+  .top-bar-section li.active:not(.has-form) a:not(.button),
+  .top-bar-section li:not(.has-form) a:not(.button) {
+    background-color: transparent;
+    height: auto;
+    line-height: 1em;
+    font-size: 0.875rem;
+    padding: 0 0.8; }
+    .top-bar-section li.active:not(.has-form) a:not(.button):hover,
+    .top-bar-section li:not(.has-form) a:not(.button):hover {
+      background-color: transparent; }
+
+  .join-us::after {
+    display: none; }
+
+  .top-bar-section ul li > a.login {
+    border-radius: 3px;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 0.8125rem;
+    min-height: 1em;
+    line-height: 1em;
+    margin-top: 0;
+    margin-left: 0;
+    clear: left; } }
 /* ------- Mobile Top Bar -------------*/
 .right-off-canvas-top-bar {
   height: 8.125rem;
@@ -5872,7 +5911,7 @@ ul.primary-nav li > a {
     height: 100%;
     display: block; }
 .mobile-nav h2 {
-  font-family: Rockwell, serif;
+  font-family: "lexia", Georgia, serif;
   text-transform: uppercase;
   font-size: 1.125rem;
   color: #95be49;
@@ -5895,9 +5934,9 @@ ul.primary-nav li > a {
   text-align: center; }
 
 h3.header-swash {
-  font-family: Rockwell, serif;
+  font-family: "lexia", Georgia, serif;
   text-transform: uppercase;
-  font-size: 1.125rem;
+  font-size: 1.0625rem;
   color: #95be49;
   letter-spacing: .05em;
   margin-top: 2em;
@@ -5920,7 +5959,8 @@ h3.header-swash {
     h3.header-swash {
       /* min-width 641px, medium screens */ }
       h3.header-swash::before {
-        background-image: url(../../../images/section_header_desktop.png); } }
+        background-image: url(../../../images/section_header_desktop.png);
+        top: -65px; } }
 
 h2.section-subhead {
   font-family: "lexia", Georgia, serif;
@@ -5948,7 +5988,7 @@ p.section-description {
 @media only screen and (min-width: 40.063em) {
   /* min-width 641px, medium screens */
   p.section-description {
-    padding: 0 7em; } }
+    padding: 0 3em; } }
 a.email {
   font-weight: 600; }
 
@@ -5963,6 +6003,8 @@ b, strong {
   .three-column-split:before, .three-column-split:after {
     content: " ";
     display: table; }
+  .three-column-split + .sub-section {
+    margin-top: 2em; }
 
 /*---------- Intro -----------*/
 #intro {
@@ -6069,6 +6111,11 @@ b, strong {
     background-image: radial-gradient(99px at 50% -73%, #b0ce77 0%, #95be49 100%);
     border-radius: 4px; }
 
+@media only screen and (min-width: 40.063em) {
+  /* min-width 641px, medium screens */
+  .pricing-table .cta-button a {
+    width: auto !important;
+    padding: 8px 13px 7px !important; } }
 /*------- vCards --------*/
 .member-cards {
   background-color: #fff;
