--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -11,7 +11,6 @@
 // CUSTOM VARIABLES
 //
 
-$rockwell-fontstack: Rockwell, serif;
 $meta-serif-fontstack: "lexia", Georgia, serif;
 $open-sans-fontstack: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
 $gray-rule: 1px solid #ddd;
@@ -90,8 +89,8 @@ $global-radius: 4px;
 
 // Media Query Ranges
 // $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
-// $large-range: (64.063em, 90em);
+$medium-range: (40.063em, 58.75em); // 64em original, 58.75em = 940 / 16
+$large-range: (58.813em, 90em);
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
 
